--- a/src/utils/globals.css
+++ b/src/utils/globals.css
@@ -1,1 +1,23 @@
 @tailwind base;
+
+@font-face {
+  font-family: 'Grotesque MT Std';
+  src: url('../../static/fonts/GrotesqueMTStd-BoldExtended.woff2')
+      format('woff2'),
+    url('../../static/fonts/GrotesqueMTStd-BoldExtended.woff') format('woff');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Simplon BP';
+  src: url('../../static/fonts/SimplonBP-Medium.woff2') format('woff2'),
+    url('../../static/fonts/SimplonBP-Medium.woff') format('woff');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Simplon BP';
+  src: url('../../static/fonts/SimplonBP-Bold.woff2') format('woff2'),
+    url('../../static/fonts/SimplonBP-Bold.woff') format('woff');
+  font-weight: 700;
+}
