[+] Add in brand colours

--- a/src/utils/globals.css
+++ b/src/utils/globals.css
@@ -1,4 +1,24 @@
+/* ============================================================================
+** TAILWIND
+============================================================================ */
+
 @tailwind base;
+
+/* ============================================================================
+** COLOURS
+============================================================================ */
+
+:root {
+  --color-brand: #ff1200;
+  --color-black-primary: #191919;
+  --color-white-primary: #fff;
+  --color-white-secondary: #c4c4c4;
+  --color-white-tertiary: #efefef;
+}
+
+/* ============================================================================
+** FONTS
+============================================================================ */
 
 @font-face {
   font-family: 'Grotesque MT Std';
