--- a/src/utils/globals.css
+++ b/src/utils/globals.css
@@ -12,8 +12,9 @@
   --color-brand: #ff1200;
   --color-black-primary: #191919;
   --color-white-primary: #fff;
-  --color-white-secondary: #c4c4c4;
-  --color-white-tertiary: #efefef;
+  --color-white-secondary: #9b9b9b;
+  --color-white-tertiary: #c4c4c4;
+  --color-white-quaternary: #efefef;
 }
 
 /* ============================================================================
