--- a/src/utils/globals.css
+++ b/src/utils/globals.css
@@ -26,6 +26,7 @@
   src: url('../../static/fonts/GrotesqueMTStd-BoldExtended.woff2')
       format('woff2'),
     url('../../static/fonts/GrotesqueMTStd-BoldExtended.woff') format('woff');
+  font-display: swap;
   font-weight: 700;
 }
 
@@ -34,6 +35,7 @@
   src: url('../../static/fonts/SimplonBP-Medium.woff2') format('woff2'),
     url('../../static/fonts/SimplonBP-Medium.woff') format('woff');
   font-weight: 500;
+  font-display: swap;
 }
 
 @font-face {
@@ -41,4 +43,5 @@
   src: url('../../static/fonts/SimplonBP-Bold.woff2') format('woff2'),
     url('../../static/fonts/SimplonBP-Bold.woff') format('woff');
   font-weight: 700;
+  font-display: swap;
 }
